Iteration 2: recipe page black-bean-soup

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/black-bean-soup.html">Black Bean Soup</a>
     </body>
 </html>
