A website with three recipes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf=8">
         <title>Recipes</title>
@@ -7,6 +7,12 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/black-bean-soup.html">Black Bean Soup</a>
+        <ul>
+            <li><a href="recipes/black-bean-soup.html">Black Bean Soup</a></li>
+            <li><a href="recipes/startup.html">Startup</a></li>
+            <li><a href="recipes/brunelleschi.html">Brunelleschi Dome</a></li>
+        </ul>
+
+
     </body>
 </html>
