--- a/recipes/black-bean-soup.html
+++ b/recipes/black-bean-soup.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8"
-        <title>Recipes</title>
+
     </head>
 
     <body>
-        <h1>Black Beans Soup</h1>
+        <h1>Black Bean Soup</h1>
+        <img src="../images/Beans Soup.jpg" alt="Black Bean Soup" height="400" width="400">
+        <h1> Here is how you can cook a delicious black bean soup</h1>
+        <h2>Ingredients</h2>
+            <ul>
+                <li>1 pound of black beans</li>
+                <li>6 cups of water</li>
+                <l1>1 teaspoon of Basil</l1>
+                <li>1 teaspoon of Oregano</li>
+                <li>1/2 teaspoon of garlic powder</li>
+                <li>1/4 teaspoon of pepper</li>
+                <li>3/4 teaspoon of salt</li>
+            </ul>
+
+        <h2>Steps</h2>  
+            <ol>
+                <li>Pour the water and beans in a big enough pan</li>
+                <li>Add all other ingredients</li>
+                <li>Cook the beans for about two hours at a very low (lowest) temperature</li>
+                <li>Serve the soup by adding cheese (Queso Fresco), cream (Crema Mexicana), chopped onion, and rice</li>
+            </ol>
     </body>
 </html>
